--- a/user.html
+++ b/user.html
@@ -66,7 +66,7 @@ document.title = `${name} - Pikko Videos`;
         videos.sort((a, b) => new Date(b.date) - new Date(a.date));
         const list = videos.map(v => `
           <div class="videoCard">
-            <img src="${SERVER}/thumbnails/${v.thumbnail || `${v.id}.jpg`}" alt="thumb"><br>
+            <a href="watch?id=${v.id}"><img src="${SERVER}/thumbnails/${v.thumbnail || `${v.id}.jpg`}" alt="thumb"></a><br>
             <b>
               ${v.title}
               ${v.password ? `<img src="img/lock.svg" alt="locked" class="lockIcon">` : ""}
@@ -78,7 +78,6 @@ document.title = `${name} - Pikko Videos`;
               hour: "2-digit",
               minute: "2-digit"
             })}<br>
-            <a href="watch?id=${v.id}">watch</a>
           </div>
         `).join("");
         document.getElementById("list").innerHTML = list || "No videos yet.";
@@ -94,3 +93,4 @@ document.title = `${name} - Pikko Videos`;
   </script>
 </body>
 </html>
+
