--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <option value="old">Oldest first</option>
     </select>
 
-    <input id="videoSearch" placeholder="Search video title" oninput="loadVideos()" style="padding: 4px;">
-    <input id="userSearch" placeholder="Search user" oninput="loadVideos()" style="padding: 4px;">
+    <input id="videoSearch" placeholder="Search by video title" oninput="loadVideos()" style="padding: 4px;">
+    <input id="userSearch" placeholder="Search by user name" oninput="loadVideos()" style="padding: 4px;">
   </div>
 
   <div id="userList"></div>
@@ -124,5 +124,6 @@
   });
 </script>
 </body>
+
 
 
