--- a/terms.html
+++ b/terms.html
@@ -16,14 +16,18 @@
     <a href="./"><img class="logo" src="logo.png" alt="logo" width="200" height="100"></a>
     <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
     <h1>terms</h1>
-    <p>･By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "These terms").</p>
-     <p>･By signing up, users are automatically published online.</p>
-    <p>･We are not responsible for any damages incurred to the accounts created through this service or videos posted.</p>
-    <p>･Do not submit videos or text that other users may find offensive.</p>
-    <p>･Do not use it in a manner that violates the Constitution.</p>
-    <p>･Malicious accounts and videos will be deleted without prior notice.</p>
-    <p>･Your data is not fully protected and may be exposed.</p>
-    <p>･These terms may be changed without prior notice.</p>
-    <p>･This service may be terminated without notice.</p>
+    <section>
+      <ul>
+        <li>By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "These terms").</li>
+        <li>By signing up, users are automatically published online.</li>
+        <li>We are not responsible for any damages incurred to the accounts created through this service or videos posted.</li>
+        <li>Do not submit videos, pictures, musics or text that other users may find offensive.</li>
+        <li>Do not use it in a manner that violates the Constitution.</li>
+        <li>Malicious accounts and videos will be deleted without prior notice.</li>
+        <li>Your data is not fully protected and may be exposed.</li>
+        <li>These terms may be changed without prior notice.</li>
+        <li>This service may be terminated without notice.</li>
+      </ul>
+    </section>
   </body>
 </html>
